--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RocBoi Quez - If I Lied</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/script.js"></script>
+</head>
+<body>
 
+    <!-- Hero Section -->
+    <header id="hero">
+        <div class="overlay"></div>
+        <div class="content">
+            <h1>RocBoi Quez</h1>
+            <h2>"If I Lied"</h2>
+            <p>Atlanta’s Underground Hip-Hop – Out Now!</p>
+            <a href="https://ffm.to/if_i_lied_rocboi_quez.OIS" class="btn" target="_blank">Listen Now</a>
+        </div>
+    </header>
+
+    <!-- Music Section -->
+    <section id="music">
+        <h2>Listen to "If I Lied"</h2>
+        <iframe src="https://ffm.to/if_i_lied_rocboi_quez.OIS" allow="autoplay" frameborder="0"></iframe>
+    </section>
+
+    <!-- About RocBoi Quez -->
+    <section id="about">
+        <h2>About RocBoi Quez</h2>
+        <p>RocBoi Quez is bringing raw, unfiltered hip-hop straight from Atlanta’s underground scene. "If I Lied" is his latest drop, showcasing his lyrical fire and street energy.</p>
+    </section>
+
+    <!-- News Section -->
+    <section id="news">
+        <h2>Latest News</h2>
+        <p>Stay updated with RocBoi Quez's latest music releases, shows, and interviews.</p>
+    </section>
+
+    <!-- Contact & Socials -->
+    <footer>
+        <h2>Follow RocBoi Quez</h2>
+        <p>Stay connected on social media and never miss an update.</p>
+        <ul>
+            <li><a href="#" target="_blank">Instagram</a></li>
+            <li><a href="#" target="_blank">Twitter</a></li>
+            <li><a href="#" target="_blank">YouTube</a></li>
+        </ul>
+    </footer>
+
+</body>
+</html>
+
+ 
